[INJICERT-1149] User Story 3: Implement Token Endpoint for Pre-Authorized Code Exchange (#529)
* revocation

Signed-off-by: Hitesh C <jainhitesh9998@gmail.com>

* feat(constants): add new credential configuration constants

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>

* feat(constants): add new error constants for credential configuration

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>

* feat(dto): add PreAuthCodeData class for credential configuration

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>

* feat(dto): add PreAuthorizedRequest and PreAuthorizedResponse classes for credential configuration

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>

* feat(dto): add CredentialOfferResponse, Grant, and TxCode classes for credential configuration

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>

* feat(cache): add methods for managing PreAuthCodeData and CredentialOfferResponse in cache

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>

* feat(controller): add PreAuthorizedCodeController and PreAuthorizedCodeService for pre-authorized code flow

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>

* feat(controller): add endpoint to retrieve credential offer data by offer ID

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>

* feat(controller): enhance credential offer retrieval with improved logging and validation

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>

* fix(constants): update MISSING_MANDATORY_CLAIM error message format

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>

* feat(dto): enhance PreAuthorizedRequest and PreAuthorizedResponse with JSON property annotations

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>

* feat(controller): update PreAuthorizedCodeController to use Jakarta validation

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>

* refactor(service): replace cacheService with vciCacheService in PreAuthorizedCodeService

Signed-off-by: amaydixit11 <amaydixit11@gmail.com>

* feat(config): update application-