@@ -2,9 +2,11 @@ package io.mosip.certify.services;
 
 import io.mosip.certify.core.constants.Constants;
 import io.mosip.certify.core.constants.ErrorConstants;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import io.mosip.certify.core.dto.*;
 import io.mosip.certify.core.exception.CertifyException;
 import io.mosip.certify.core.exception.InvalidRequestException;
+import io.mosip.certify.utils.AccessTokenJwtUtil;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -23,6 +25,12 @@ public class PreAuthorizedCodeService {
     @Autowired
     private VCICacheService vciCacheService;
 
+    @Autowired
+    private AccessTokenJwtUtil accessTokenJwtUtil;
+
+    @Autowired
+    private ObjectMapper objectMapper;
+
     @Value("${mosip.certify.identifier}")
     private String issuerIdentifier;
 
@@ -38,12 +46,26 @@ public class PreAuthorizedCodeService {
     @Value("${mosip.certify.domain.url}")
     private String domainUrl;
 
+    @Value("${mosip.certify.access-token.expiry-seconds:600}")
+    private int accessTokenExpirySeconds;
+
+    @Value("${mosip.certify.c-nonce.expiry-seconds:300}")
+    private int cNonceExpirySeconds;
+
+    @Value("${mosip.certify.pre-auth-code.single-use:true}")
+    private boolean singleUsePreAuthCode;
+
+    @Value("${mosip.certify.oauth.issuer}")
+    private String oauthIssuer;
+
+    @Value("${mosip.certify.oauth.access-token.audience}")
+    private String oauthAudience;
+
     private static final SecureRandom secureRandom = new SecureRandom();
     private static final String ALPHANUMERIC = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
 
     public String generatePreAuthorizedCode(PreAuthorizedRequest request) {
-        log.info("Generating pre-authorized code for credential configuration: {}",
-                request.getCredentialConfigurationId());
+        log.info("Generating pre-authorized code for credential configuration: {}", request.getCredentialConfigurationId());
 
         validatePreAuthorizedRequest(request);
 
@@ -147,10 +169,7 @@ public class PreAuthorizedCodeService {
 
         if (offer == null) {
             log.error("Credential offer not found or expired for ID: {}", offerId);
-            throw new CertifyException(
-                    "offer_not_found",
-                    "Credential offer not found or expired"
-            );
+            throw new CertifyException(ErrorConstants.CREDENTIAL_OFFER_NOT_FOUND, "Credential offer not found or expired");
         }
 
         log.info("Successfully retrieved credential offer for ID: {}", offerId);
@@ -209,8 +228,13 @@ public class PreAuthorizedCodeService {
 
     private String buildCredentialOfferUri(String offerId) {
         String offerFetchUrl = domainUrl + "v1/certify/credential-offer-data/" + offerId;
-        String encodedUrl = URLEncoder.encode(offerFetchUrl, StandardCharsets.UTF_8);
-        return "openid-credential-offer://?credential_offer_uri=" + encodedUrl;
+        try {
+            String encodedUrl = URLEncoder.encode(offerFetchUrl, StandardCharsets.UTF_8.name());
+            return "openid-credential-offer://?credential_offer_uri=" + encodedUrl;
+        } catch (java.io.UnsupportedEncodingException e) {
+            // UTF-8 is always supported, this should never happen
+            throw new RuntimeException("UTF-8 encoding not supported", e);
+        }
     }
 
     private String generateSecureCode(int length) {
@@ -219,5 +243,111 @@ public class PreAuthorizedCodeService {
             code.append(ALPHANUMERIC.charAt(secureRandom.nextInt(ALPHANUMERIC.length())));
         }
         return code.toString();
+    }
+
+    /**
+     * Exchange pre-authorized code for access token
+     */
+    public OAuthTokenResponse exchangePreAuthorizedCode(OAuthTokenRequest request) {
+        log.info("Processing token request for grant_type: {}", request.getGrant_type());
+
+        // Retrieve and validate pre-auth code data
+        PreAuthCodeData codeData = vciCacheService.getPreAuthCodeData(request.getPre_authorized_code());
+
+        validateTokenRequest(request, codeData);
+
+        // Generate access token
+        String accessToken = generateAccessToken(codeData);
+
+        // Generate c_nonce
+        String cNonce = generateSecureCode(32);
+
+        long currentTime = System.currentTimeMillis();
+        Transaction transaction = Transaction.builder()
+                .credentialConfigurationId(codeData.getCredentialConfigurationId())
+                .claims(codeData.getClaims())
+                .cNonce(cNonce)
+                .cNonceExpiresAt(currentTime + (cNonceExpirySeconds * 1000L))
+                .createdAt(currentTime)
+                .build();
+
+        vciCacheService.setTransaction(accessToken, transaction);
+
+        log.info("Successfully exchanged pre-authorized code for access token");
+
+        OAuthTokenResponse response = new OAuthTokenResponse();
+        response.setAccessToken(accessToken);
+        response.setTokenType("Bearer");
+        response.setExpiresIn(accessTokenExpirySeconds);
+        response.setCNonce(cNonce);
+        response.setCNonceExpiresIn(cNonceExpirySeconds);
+        return response;
+    }
+
+    private void validateTokenRequest(OAuthTokenRequest request, PreAuthCodeData codeData) {
+
+        // Validate grant type
+        if (!Constants.PRE_AUTHORIZED_CODE_GRANT_TYPE.equals(request.getGrant_type())) {
+            log.error("Unsupported grant type: {}", request.getGrant_type());
+            throw new CertifyException(ErrorConstants.UNSUPPORTED_GRANT_TYPE, "Grant type not supported");
+        }
+
+        if (codeData == null) {
+            log.error("Pre-authorized code not found");
+            throw new CertifyException(ErrorConstants.INVALID_GRANT, "Pre-authorized code not found");
+        }
+
+        // Check if already used
+        if (singleUsePreAuthCode && vciCacheService.isPreAuthCodeUsed(request.getPre_authorized_code())) {
+            log.error("Pre-authorized code already used");
+            throw new CertifyException(ErrorConstants.INVALID_GRANT, "Pre-authorized code has already been used");
+        }
+
+        // Check expiry
+        long currentTime = System.currentTimeMillis();
+        if (codeData.getExpiresAt() < currentTime) {
+            log.error("Pre-authorized code expired. Expiry: {}, Current: {}", codeData.getExpiresAt(), currentTime);
+            throw new CertifyException("pre_auth_code_expired", "Pre-authorized code has expired");
+        }
+
+        // Validate transaction code if required
+        String expectedTxCode = codeData.getTxnCode();
+        if (StringUtils.hasText(expectedTxCode) && !StringUtils.hasText(request.getTx_code())) {
+            log.error("Transaction code required but not provided");
+            throw new CertifyException("tx_code_required", "Transaction code is required for this pre-authorized code");
+        }
+        if (StringUtils.hasText(expectedTxCode) && !expectedTxCode.equals(request.getTx_code())) {
+            log.error("Transaction code mismatch");
+            throw new CertifyException("tx_code_mismatch", "Transaction code does not match");
+        }
+        // Mark code as used if single-use
+        if (singleUsePreAuthCode) {
+            vciCacheService.markPreAuthCodeAsUsed(request.getPre_authorized_code());
+            log.info("Pre-authorized code marked as used");
+        }
+    }
+
+    /**
+     * Generate a signed JWT access token for pre-authorized code flow.
+     * Calls AccessTokenJwtUtil.generateSignedJwt directly with raw parameters.
+     */
+    private String generateAccessToken(PreAuthCodeData codeData) {
+        try {
+            String claimsJson = objectMapper.writeValueAsString(codeData.getClaims());
+            String scope = codeData.getCredentialConfigurationId();
+            String clientId = "pre-auth-" + UUID.randomUUID().toString();
+            
+            return accessTokenJwtUtil.generateSignedJwt(
+                claimsJson,
+                scope,
+                clientId,
+                oauthIssuer,
+                oauthAudience,
+                accessTokenExpirySeconds
+            );
+        } catch (Exception e) {
+            log.error("Failed to generate access token for pre-authorized code flow", e);
+            throw new CertifyException(ErrorConstants.UNKNOWN_ERROR, "Failed to generate access token", e);
+        }
     }
 }
